# gfx

./: .conf  .gitignore  Dockerfile  README.md
.github/workflows/: build.yml
application/: CMakeLists.txt  conanfile.txt
application/core/: CMakeLists.txt  application.cpp  application.h  clock.cpp  clock.h  event.h  layer.h  window.cpp  window.h
application/graphics/: CMakeLists.txt  aabb.cpp  aabb.h  cartesian.cpp  cartesian.h  color.cpp  color.h  dielectric.cpp  quadtree.cpp  quadtree.h
application/main/: CMakeLists.txt  main.cpp  main.h
application/platform/: CMakeLists.txt  glfw.cpp  glfw.h
application/test/: CMakeLists.txt
script/: build.sh  export.sh
